--- a/src/main/resources/templates/comum/index.html
+++ b/src/main/resources/templates/comum/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>Spring Security Example</title>
+        <title>CompareX</title>
     </head>
     <body>
-        <h1>Welcome!</h1>
-
+        <h1>Comparex</h1>
+        <form method="GET" th:action="@{/search}">
+            <label for="search"></label>
+            <input type="search">
+        </form>
     </body>
 </html>
