--- a/src/main/resources/templates/comum/index.html
+++ b/src/main/resources/templates/comum/index.html
@@ -8,7 +8,7 @@
         l
         <form method="GET" th:action="@{/search}">
             <input name="pesquisar" type="search">
-            <button class="botao-submit" th:type="submit">Comparar</button>
+            <button class="botao-submit" id="comparar" th:type="submit">Comparar</button>
         </form>
     </body>
 </html>
