--- a/src/main/resources/templates/comum/index.html
+++ b/src/main/resources/templates/comum/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
         <title>CompareX</title>
+        <link th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
     <body>
         <h1>Comparex</h1>
